fix text input border overlap

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -135,6 +135,7 @@ body {
   padding: 5px;
   font-size: 1rem;
   width: 100%;
+  border: 1px solid #000;
 }
 
 .modal-content button {
@@ -142,13 +143,4 @@ body {
   padding: 10px;
   font-size: 1rem;
   cursor: pointer;
-}
-
-.modal-verify p {
-  padding: 0;
-  margin: 0;
-}
-
-.passcode-modal button {
-  margin: 0;
 }
